@@ -50,7 +50,7 @@ extern long tell_position (FILE *file);
 
 extern long file_size (FILE *file);
 
-extern char *mfgets (char *buffer, unsigned long size, FILE *file);
+extern char *mfgets (char *buffer, int length, FILE *file);
 
 extern char work_buffer[];
 
